--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,13 @@
   font-size: 1.5em;
 }
 
+/** Form to send the query to get tracks **/
+
 .Form {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width: 60%;
   height: 40%;
   padding: 50px;
   border: 1px gray solid;
@@ -84,6 +86,10 @@
 .Track .actions {
   display: inline-block;
 }
+
+/** Album item **/
+
+/** Artist item **/
 
 /** React logo **/
 
